--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   http: ^1.1.0
+  image_picker: ^1.0.0
+  mime: ^1.0.0
 
 dev_dependencies:
   flutter_test:
