--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,8 @@ dependencies:
   google_maps_flutter: ^2.5.0
   geolocator: ^10.1.0
   flutter_stripe: ^12.1.1
+  pdf: ^3.10.0
+  path_provider: ^2.1.0
 
 dev_dependencies:
   flutter_test:
