--- a/firebase-database-rules.jsonc
+++ b/firebase-database-rules.jsonc
@@ -18,7 +18,7 @@
       }
     },
     
-    // Products node - anyone can read, only admins can write
+    // Products node - anyone can read, only admins can write (except quantity can be decreased by anyone)
     "products": {
       ".read": true,
       ".indexOn": ["category", "price", "name", "barcode"],
@@ -33,21 +33,22 @@
         },
         "stock": {
           ".validate": "newData.isNumber() && newData.val() >= 0"
+        },
+        // Allow any authenticated user to update quantity (for order checkout)
+        "quantity": {
+          ".write": "auth != null",
+          ".validate": "newData.isNumber() && newData.val() >= 0"
         }
       }
     },
     
     // Orders node - users can read their own orders, admins can read all
     "orders": {
+      ".read": "auth != null",
       ".indexOn": ["userId", "status", "createdAt"],
       "$orderId": {
         ".read": "auth != null && (data.child('userId').val() === auth.uid || root.child('users').child(auth.uid).child('role').val() === 'admin')",
-        ".write": "auth != null && (
-          // Users can create new orders
-          (!data.exists() && newData.child('userId').val() === auth.uid) ||
-          // Admins can update existing orders
-          root.child('users').child(auth.uid).child('role').val() === 'admin'
-        )",
+        ".write": "auth != null && ((!data.exists() && newData.child('userId').val() === auth.uid) || root.child('users').child(auth.uid).child('role').val() === 'admin')",
         ".validate": "newData.hasChildren(['userId', 'items', 'total', 'status', 'createdAt'])",
         "userId": {
           ".validate": "newData.isString()"
@@ -66,14 +67,7 @@
       ".indexOn": ["userId", "status", "createdAt"],
       "$prescriptionId": {
         ".read": "auth != null && (data.child('userId').val() === auth.uid || root.child('users').child(auth.uid).child('role').val() === 'admin')",
-        ".write": "auth != null && (
-          // Users can create new prescriptions
-          (!data.exists() && newData.child('userId').val() === auth.uid) ||
-          // Users can update their own prescriptions if status is pending
-          (data.child('userId').val() === auth.uid && data.child('status').val() === 'pending') ||
-          // Admins can update any prescription
-          root.child('users').child(auth.uid).child('role').val() === 'admin'
-        )",
+        ".write": "auth != null && ((!data.exists() && newData.child('userId').val() === auth.uid) || (data.child('userId').val() === auth.uid && data.child('status').val() === 'pending') || root.child('users').child(auth.uid).child('role').val() === 'admin')",
         ".validate": "newData.hasChildren(['userId', 'imageUrl', 'status', 'createdAt'])",
         "status": {
           ".validate": "newData.val() === 'pending' || newData.val() === 'approved' || newData.val() === 'rejected'"
