--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   flutter_stripe: ^12.1.1
   pdf: ^3.10.0
   path_provider: ^2.1.0
+  url_launcher: ^6.2.0
 
 dev_dependencies:
   flutter_test:
@@ -86,6 +87,9 @@ flutter:
     - assets/images/SkinCare.jpg
     - assets/images/Bandage.jpg
     - assets/images/Logo.png
+    - assets/images/lai.jpg
+    - assets/images/cheni.jpg
+    - assets/images/profi.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
