refactor: Update app name from "pharmacy_app" to "Panacan Pharmacy"
- Changed app name in pubspec.yaml from pharmacy_app to panacan_pharmacy
- Updated Android app label in AndroidManifest.xml
- Updated iOS app display name and bundle name in Info.plist
- Updated web app title and description in index.html
- App now displays as "Panacan Pharmacy" across all platforms

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
-	<string>Pharmacy App</string>
+	<string>Panacan Pharmacy</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -13,7 +13,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>pharmacy_app</string>
+	<string>panacan_pharmacy</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
